# candy-store

candy_store_server/: .gitignore  README.md  config.py  manage.py  pyproject.toml  requirements.txt
candy_store_server/api/: cart_views.py  orders_views.py  products_views.py  urls.py  users_views.py
candy_store_server/authentication/: urls.py  views.py
candy_store_server/candy_store/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
candy_store_server/candy_store/fixtures/: candy_store.json
candy_store_server/candy_store/migrations/: 0001_initial.py  0002_product_description.py  0003_alter_product_image_path_alter_product_is_active_and_more.py
candy_store_server/candy_store/services/: product_service.py
candy_store_server/candy_store_server/: asgi.py  settings.py  urls.py  wsgi.py
candy_store_server/cart/: admin.py  models.py  serializers.py
candy_store_server/cart/fixtures/: carts.json
candy_store_server/cart/migrations/: 0001_initial.py  0002_initial.py  0003_rename_created_up_cart_created_at_and_more.py  0004_remove_cart_product_id_remove_cart_quantity_and_more.py
candy_store_server/orders/: admin.py  models.py  serializers.py  signals.py
candy_store_server/orders/fixtures/: orders.json
candy_store_server/orders/migrations/: 0001_initial.py  0002_initial.py  0003_rename_created_up_order_created_at_and_more.py  0004_alter_order_payment_method.py
candy_store_server/scripts/: clear_expired_sessions.py
candy_store_server/users/: admin.py  managers.py  models.py  serializers.py
candy_store_server/users/fixtures/: users.json
(+42 files in other folders)
